--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -137,7 +137,7 @@
   z-index: 10;
 }
 .lesson-wrapper #lesson-input {
-  background-color: rgba(148, 31, 22, 0);
+  background-color: rgba(116, 22, 16, 0);
   color: transparent;
   resize: none;
   border: none;
@@ -167,7 +167,7 @@ body.is-dark-theme .statsbox-label {
 }
 
 .incorrect-char {
-  color: #941f16;
+  color: #741610;
   font-weight: bold;
 }
 
@@ -505,11 +505,8 @@ body.is-dark-theme .statsbox-label {
   color: rgba(255, 255, 255, 0.9) !important;
 }
 #pf-typingTest__container.pf-darkmode div.lesson-wrapper div.lesson-text {
-  background-color: #27b6d4;
+  background-color: rgba(39, 182, 212, 0.6);
   color: #ffffff;
-}
-#pf-typingTest__container.pf-darkmode div.lesson-wrapper div.lesson-text .char-input {
-  color: rgba(255, 255, 255, 0.7);
 }
 #pf-typingTest__container.pf-darkmode div.lesson-wrapper div.statsbox-label {
   color: rgba(255, 255, 255, 0.7);
