--- a/styles/sass/colours.scss
+++ b/styles/sass/colours.scss
@@ -6,6 +6,6 @@ $white: #ffffff;
 $black: #000000;
 
 // Other colours
-$darkred: #941f16;
+$darkred: #741610;
 $verydarkgrey: #212529;
 $darkgrey: #3d3d3d;
